# c-ringbuf

simple/: ring_buffer.c  ring_buffer.h  ring_buffer_chapter.c  ring_buffer_chapter.h
test/: CMakeLists.txt  main.c
test/fd/: CMakeLists.txt  main.c
test/simple/: CMakeLists.txt  main.c
